ingress/fixtures/ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: test
  namespace: testing

spec:
  rules:
  - host: traefik.tchouk
    http:
      paths:
      - path: /bar
        backend:
          serviceName: service1
          servicePort: 80
      - path: /foo
        backend:
          serviceName: service1
          servicePort: 80
