ingress/fixtures/ingress_and_service.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: test
  namespace: testing

spec:
  rules:
    - host: traefik.tchouk
      http:
        paths:
          - path: /bar
            backend:
              serviceName: service1
              servicePort: 80
          - path: /foo
            backend:
              serviceName: service1
              servicePort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: service1
  namespace: testing

spec:
  ports:
    - port: 80
  clusterIp: 10.0.0.1
