ingress/fixtures/ingress_with_annotations.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: test
  namespace: testing
  annotations:


#    kubernetes.io/ingress.class: traefik

spec:
  rules:
  - host: traefik.tchouk
    http:
      paths:
      - path: /bar
        backend:
          serviceName: service1
          servicePort: 80
      - path: /foo
        backend:
          serviceName: service1
          servicePort: 80
